--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@
         font-weight: bolder;
         font-family: 'Courier New', Courier, monospace;
         font-style: normal;
-        color: violet;
+        color: lavender;
     }
     p {
         font-size: 17px;
