--- a/index.css
+++ b/index.css
@@ -1,114 +1,25 @@
-/* 
-.pizzaSizesContainer {
-    width: 80%;
-    margin: 40px auto 0px auto;
-    text-align: center;
-    border-radius: 4px;
+@media screen and (max-width: 1060px) {
+    #primary { width:67%; }
+    #secondary { width:30%; margin-left:3%;}  
 }
 
-
-.pizzaSizesContainer div h2 {
-    padding: 20px;
-    font-size: 100px;
-    opacity: 0.1;
-   
+/* Media Queries: Tabled Portrait */
+@media screen and (max-width: 768px) {
+    #primary { width:100%; }
+    #secondary { width:100%; margin:0; border:none; }
+}
+@media (min-device-width:600px) {
+    img[data-src-600px] {
+        content: attr(data-src-600px, url);
+    }
 }
 
-.pizzaSizesContainer  div {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+@media (min-device-width:800px) {
+    img[data-src-800px] {
+        content: attr(data-src-800px, url);
+    }
 }
 
-.pizaSizes {
-    margin-top: 60px;
-}
-
-.smallPizza {
-    width: 25%;
-    height: 300x;
-    background-color: rgba(26, 12, 12, 0.2);
-    border: 1px solid white;
-    border-radius: 4px;
-    margin-bottom: 20px;
-}
-
-.smallPizza div {
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-}
-
-.smallPizza div img {
-    width: 100%;
-    margin-top: -50px;
-    margin-bottom: 20px;
-}
-
-.mediumPizza {
-    width: 30%;
-    height: 300px;
-    background-color: rgba(26, 12, 12, 0.2);
-    border: 1px solid white;
-    border-radius: 4px;
-    margin-bottom: 20px;
-}
-
-.mediumPizza div {
-   width: 90%;
-   display: flex;
-   flex-direction: column;
-}
-
-.mediumPizza div img {
-   width: 100%;
-   margin-top: -60px;
-   margin-bottom: 20px;
-}
-
-.largePizza {
-    width: 35%;
-    height: 300px;
-    background-color: rgba(26, 12, 12, 0.2);
-    border: 1px solid white;
-    border-radius: 4px;
-    margin-bottom: 20px;
-}
-
-.largePizza div {
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-}
-
-.largePizza div img {
-   width: 100%;
-   margin-top: -70px;
-   margin-bottom: 20px;
-}
-
-.pizaSizes button {
-    padding: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: burlywood;
-    box-shadow: 0px 0px 5px gray;
-}
-
-.pizaSizes button:hover {
-    color: black;
-    background-color: white;
-}
-
-/* CUSTOMIZED ORDERS */
-/* .customizedOrders {
-    background-image: url("IMAGES/form-background.jpg");
-    height: auto;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;  */
     .left {
         position: absolute;
         left: 50px;
